--- a/simple-pomodoro/public/index.html
+++ b/simple-pomodoro/public/index.html
@@ -24,12 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Josefin+Sans:wght@300&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Josefin+Sans:wght@300&family=Playfair+Display&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     <title>Simple Pomodoro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <a class="github-fork-ribbon left-top" href="https://github.com/tristanjoshuaalba/simple-pomodoro" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
+    
     <div id="root"></div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -42,3 +46,5 @@
     -->
   </body>
 </html>
+
+
