Cleaning up code before build

--- a/simple-pomodoro/public/index.html
+++ b/simple-pomodoro/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A simple pomodoro timer app created using React.JS"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/timer-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,6 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Josefin+Sans:wght@300&family=Playfair+Display&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
+    
     <title>Simple Pomodoro</title>
   </head>
   <body>
